Top Layover and main section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 
       <!-- Google fonts -->
-      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+
+      <!-- Bootstrap 3 -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
       <link rel="stylesheet" href="css/style.css">
       <title>Spotify Web</title>
@@ -16,38 +19,160 @@
    <body>
 
       <div class="flex-container">
-         <div class="side-nav-bar"></div>
+         <div class="side-nav-bar">
+            <nav>
+               <div class="logo-container">
+                  <img src="img/spotify-logo.png" alt="">
+               </div>
+
+               <div class="playlist-container">
+                  <h3>PLAYLIST</h3>
+               </div>
+            </nav>
+         </div>
+
          <div class="main-content">
-            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum consequatur iure saepe accusamus autem placeat, est fuga quaerat similique, quis eius tempora atque modi repellendus eveniet architecto perferendis nihil nesciunt.</div>
-            <div>Architecto alias, quod adipisci cum sequi veritatis qui laboriosam dignissimos vero eaque. Placeat magnam pariatur distinctio consequuntur quaerat debitis, voluptate dignissimos, nihil ducimus nemo, sed iste dolorum veniam molestias veritatis!</div>
-            <div>Expedita provident mollitia soluta beatae autem vitae et voluptas rerum saepe, praesentium impedit placeat eum accusamus. Aspernatur laudantium iste vero itaque dicta quam, quidem blanditiis illo necessitatibus, architecto, quis in?</div>
-            <div>Consequuntur voluptatem delectus doloremque ea impedit pariatur accusamus excepturi tenetur id sit fuga rem dolores hic quod, eveniet, atque aliquam, voluptates soluta? Officiis quisquam aliquam fuga accusantium incidunt soluta itaque.</div>
-            <div>Reprehenderit modi et, veritatis obcaecati corporis ipsam vero officiis. Nostrum adipisci maiores veniam natus eius quam, ad! Fuga eaque voluptate culpa exercitationem natus maxime, nisi iste consequuntur, tempore a obcaecati.</div>
-            <div>Eius blanditiis quaerat magnam, facere ut labore optio totam laborum vel, ipsa et laboriosam fuga dolorem. Tempore explicabo, animi inventore numquam. Harum ab assumenda ducimus aliquam, esse officiis dolor, deserunt.</div>
-            <div>Voluptatibus saepe suscipit quia commodi nemo, repudiandae ipsam consectetur quasi nulla laborum voluptates, officia harum voluptas quae eligendi ad! Temporibus, id. Modi unde laboriosam asperiores, accusantium! Recusandae assumenda, vitae delectus!</div>
-            <div>Obcaecati sit asperiores sint quaerat eius quae explicabo qui provident ducimus, temporibus reiciendis error earum quas dignissimos quod tempore eligendi vero omnis cum quasi facere a veniam, perferendis. Quam, quis.</div>
-            <div>Aut alias, laudantium iusto magni numquam omnis tempora saepe nulla amet fuga cumque itaque eum vel repellat provident voluptate deserunt cupiditate officiis doloremque quos animi. Quidem laudantium molestiae eos minima!</div>
-            <div>Illum non deleniti consectetur modi vel, sint repudiandae in officiis esse, vero provident ipsum blanditiis id, odit reprehenderit neque fugit dolorum asperiores eum porro officia ipsa voluptatem atque! Harum, debitis!</div>
-            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae nesciunt neque, odit magni! Nulla nam maiores numquam dolores, error veniam laboriosam illo, aspernatur minima itaque incidunt labore a repudiandae rem.</div>
-            <div>Voluptatum assumenda, deleniti eveniet! Veniam quam placeat, cupiditate sint voluptate, voluptatum eaque explicabo a ratione nulla distinctio repudiandae hic ipsam vitae ipsa, dolorum laudantium iure ut unde. Maxime, voluptas, totam!</div>
-            <div>Impedit dolores inventore soluta, veniam a deserunt commodi aperiam nulla maxime est maiores obcaecati omnis totam, porro, eveniet numquam optio beatae, asperiores accusantium sed dolorum natus laudantium repudiandae ex alias?</div>
-            <div>Suscipit accusantium, perspiciatis debitis! Sit, non qui. Alias tempora repellat dolorum harum id quas ipsam quos velit nihil ipsa, atque omnis recusandae ratione ea, cumque deserunt deleniti consequuntur voluptate cupiditate.</div>
-            <div>Magnam ullam sit, perspiciatis quibusdam, nulla consequuntur quasi possimus sed nemo a, neque facere eos rem molestias voluptas sapiente animi laudantium amet commodi eaque, non deserunt at sint iusto. Dignissimos?</div>
-            <div>Enim voluptatum officiis nesciunt reprehenderit eum esse, perferendis rerum eaque nostrum asperiores explicabo sapiente laboriosam animi assumenda, inventore, molestiae sunt, aut non ea sed nihil dolores iure similique alias! Sequi.</div>
-            <div>Est ipsa corrupti fuga quos amet odio mollitia atque, quidem soluta nemo voluptatibus quibusdam sunt aperiam iusto ipsam ab nobis hic? Odit nemo vitae, quaerat quisquam iste nesciunt, quibusdam velit!</div>
-            <div>Voluptas magni excepturi iusto temporibus perferendis delectus sit autem provident, nemo tenetur nesciunt laudantium fugiat, dolorem unde beatae possimus cum rerum tempore veniam error cumque doloribus, qui vero! Minima, aliquid!</div>
-            <div>Omnis modi et iure incidunt perferendis quasi vel deserunt totam temporibus officia, voluptates saepe nobis dolorum in reiciendis obcaecati excepturi facere atque, impedit, quam? Repellendus fugiat, repudiandae eaque ipsa consectetur.</div>
-            <div>Tempora, magni. Itaque architecto aliquam consectetur in aut vel soluta, atque, rem illum fugiat aliquid aspernatur ea est at! Eligendi minima eos esse necessitatibus fugit qui dolorem maxime, nobis accusamus.</div>
-            <div>Eius in officia minima doloribus aliquid ab ratione ea repudiandae ex consequatur a odio aperiam tempora, quis sed eaque. Soluta recusandae laborum illum tempore velit nesciunt voluptatibus ipsum! Suscipit, quidem!</div>
-            <div>Voluptate rem, expedita? Veniam eligendi, et dolorum eum ratione rerum rem quidem harum nisi fugiat fugit, ut accusamus facilis ab magni sint minima perspiciatis repudiandae est alias aperiam aliquid! Tempore!</div>
-            <div>Perferendis facilis earum, corporis repellat consectetur eos odit placeat minima omnis veniam, dignissimos cum repellendus deserunt quos labore fuga sequi. Eos nobis ab, culpa quam repudiandae sapiente sunt suscipit praesentium.</div>
-            <div>Aliquam perspiciatis deserunt, voluptate quo sed. Repellat voluptates officiis inventore, soluta nesciunt, quod odit magni similique omnis? Non alias, adipisci neque esse aliquid ratione molestias dolorum deserunt voluptas, animi rerum.</div>
-            <div>Quae sequi doloremque culpa ipsum repellat mollitia, atque consequatur, eos ullam esse fugit nisi laboriosam soluta quam sint dolore voluptates rem, neque excepturi! Dicta eum, beatae quod consectetur quisquam a.</div>
-            <div>Vitae illo dolore voluptatibus, temporibus earum error atque aut minus nam dolor vel ab modi tenetur quod eveniet doloremque ex in delectus, quia. Id vel, repellat dolor nostrum vero cupiditate.</div>
-            <div>A repudiandae pariatur facere voluptas odio quia, voluptate consequatur, tempore soluta provident? Quia ratione eos, quis nam quae officia asperiores at totam modi fuga, iure? Necessitatibus veritatis debitis fugiat in.</div>
-            <div>Cum dicta, illo? Autem, nobis, nihil. Recusandae aliquid in ad non deserunt dolorem labore numquam magnam, qui, consequatur? Aspernatur voluptatum quo animi quae quia neque cumque, dolor. Repudiandae, possimus, perferendis!</div>
-            <div>Officiis quod accusantium debitis atque rerum maxime ratione necessitatibus voluptas iusto explicabo perferendis impedit, architecto a corporis inventore quae, error tempora alias sunt, cum porro, corrupti laudantium! Mollitia, minus, veniam!</div>
-            <div>Commodi debitis veritatis nam ducimus distinctio, ipsum iste, molestiae ipsam ab mollitia, quo sint placeat. Accusamus cumque voluptas beatae itaque et doloremque fuga placeat laboriosam accusantium explicabo, eum delectus facere.</div>
+            <div class="top-layover">
+               <a class="btn-round" href="">EFFETUA L'UPGRADE</a>
+            </div>
+
+            <ul class="nav-bar">
+               <li>
+                  <a href="">IN EVIDENZA</a>
+               </li>
+               <li>
+                  <a href="">PODCAST</a>
+               </li>
+               <li>
+                  <a href="">CLASSIFICHE</a>
+               </li>
+               <li>
+                  <a href="">GENERI E MOOD</a>
+               </li>
+               <li>
+                  <a href="">NUOVE USCITE</a>
+               </li>
+               <li>
+                  <a href="">SCOPRI</a>
+               </li>
+            </ul>
+
+            <section class="section-container">
+               <h2 class="section-title">Recently played</h2>
+               <div class="row">
+                  <div class="col-xs-6 col-sm-3 col-lg-2">
+                     <div class="card-container">
+                        <div class="img-container">
+                           <img src="img/heavy-metal.jpg" alt="">
+                        </div>
+                        <h4>Heavy Metal</h4>
+                        <span class="img-subtitle">Subtitle</span>
+                     </div>
+                  </div>
+
+                  <div class="col-xs-6 col-sm-3 col-lg-2">
+                     <div class="card-container">
+                        <div class="img-container">
+                           <img src="img/stranger-things.jpeg" alt="">
+                        </div>
+                        <h4>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h4>
+                        <span class="img-subtitle">Kyle Dyxon & Michael Stein</span>
+                     </div>
+                  </div>
+
+                  <div class="col-xs-6 col-sm-3 col-lg-2">
+                     <div class="card-container">
+                        <div class="img-container">
+                           <img src="img/a-quite-place.jpeg" alt="">
+                        </div>
+                        <h4>A quiet place</h4>
+                        <span class="img-subtitle">Subtitle</span>
+                     </div>
+                  </div>
+
+                  <div class="col-xs-6 col-sm-3 col-lg-2">
+                     <div class="card-container">
+                        <div class="img-container">
+                           <img src="img/split.jpeg" alt="">
+                        </div>
+                        <h4>Split</h4>
+                        <span class="img-subtitle">Subtitle</span>
+                     </div>
+                  </div>
+
+                  <div class="col-xs-6 col-sm-3 col-lg-2">
+                     <div class="card-container">
+                        <div class="img-container">
+                           <img src="img/wellness.jpeg" alt="">
+                        </div>
+                        <h4>A qure for wellness</h4>
+                        <span class="img-subtitle">Subtitle</span>
+                     </div>
+                  </div>
+
+                  <div class="col-xs-6 col-sm-3 col-lg-2">
+                     <div class="card-container">
+                        <div class="img-container">
+                           <img src="img/sinister.jpeg" alt="">
+                        </div>
+                        <h4>Sinister</h4>
+                        <span class="img-subtitle">Subtitle</span>
+                     </div>
+                  </div>
+               </div>
+            </section>
+
+            <section class="section-container">
+               <h2 class="section-title">Creato per John Doe</h2>
+               <p class="section-subtitle">Più ascolti, più saranno accurati i suggerimenti. </p>
+               <div class="row">
+                  <div class="col-xs-6 col-sm-3 col-lg-2">
+                     <div class="card-container">
+                        <div class="img-container">
+                           <img src="img/release-radar.jpeg" alt="">
+                        </div>
+                        <h4>Release Radar</h4>
+                        <span class="img-subtitle">Subtitle</span>
+                     </div>
+                  </div>
+
+                  <div class="col-xs-6 col-sm-3 col-lg-2">
+                     <div class="card-container">
+                        <div class="img-container">
+                           <img src="img/daily-mix-1.jpg" alt="">
+                        </div>
+                        <h4>Daily Mix 1</h4>
+                        <span class="img-subtitle">Subtitle</span>
+                     </div>
+                  </div>
+               </div>
+            </section>
+
+            <section class="section-container">
+               <h2 class="section-title">Artisti più popolari</h2>
+               <p class="section-subtitle">Più ascolti, più saranno accurati i suggerimenti. </p>
+               <div class="row">
+                  <div class="col-xs-6 col-sm-3 col-lg-2">
+                     <div class="card-container">
+                        <div class="img-container img-container--circle">
+                           <img src="img/heavy-metal.jpg" alt="">
+                        </div>
+                        <h4>Lana Del Ray</h4>
+                     </div>
+                  </div>
+
+                  <div class="col-xs-6 col-sm-3 col-lg-2">
+                     <div class="card-container img-container--circle">
+                        <div class="img-container">
+                           <img src="img/heavy-metal.jpg" alt="">
+                        </div>
+                        <h4>Ludovico Einaudi</h4>
+                     </div>
+                  </div>
+               </div>
+            </section>
+
+
          </div>
       </div>
 
