--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                      <div class="card-container">
                         <div class="img-container">
                            <img src="img/heavy-metal.jpg" alt="">
+                           <div class="img-layover">
+                              <a href=""><i class="far fa-play-circle"></i></a>
+                           </div>
                         </div>
                         <h4>Heavy Metal</h4>
                         <span class="img-subtitle">Subtitle</span>
@@ -74,6 +77,9 @@
                      <div class="card-container">
                         <div class="img-container">
                            <img src="img/stranger-things.jpeg" alt="">
+                           <div class="img-layover">
+                              <a href=""><i class="far fa-play-circle"></i></a>
+                           </div>
                         </div>
                         <h4>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h4>
                         <span class="img-subtitle">Kyle Dyxon & Michael Stein</span>
@@ -84,6 +90,9 @@
                      <div class="card-container">
                         <div class="img-container">
                            <img src="img/a-quite-place.jpeg" alt="">
+                           <div class="img-layover">
+                              <a href=""><i class="far fa-play-circle"></i></a>
+                           </div>
                         </div>
                         <h4>A quiet place</h4>
                         <span class="img-subtitle">Subtitle</span>
@@ -94,6 +103,9 @@
                      <div class="card-container">
                         <div class="img-container">
                            <img src="img/split.jpeg" alt="">
+                           <div class="img-layover">
+                              <a href=""><i class="far fa-play-circle"></i></a>
+                           </div>
                         </div>
                         <h4>Split</h4>
                         <span class="img-subtitle">Subtitle</span>
@@ -104,6 +116,9 @@
                      <div class="card-container">
                         <div class="img-container">
                            <img src="img/wellness.jpeg" alt="">
+                           <div class="img-layover">
+                              <a href=""><i class="far fa-play-circle"></i></a>
+                           </div>
                         </div>
                         <h4>A qure for wellness</h4>
                         <span class="img-subtitle">Subtitle</span>
@@ -114,6 +129,9 @@
                      <div class="card-container">
                         <div class="img-container">
                            <img src="img/sinister.jpeg" alt="">
+                           <div class="img-layover">
+                              <a href=""><i class="far fa-play-circle"></i></a>
+                           </div>
                         </div>
                         <h4>Sinister</h4>
                         <span class="img-subtitle">Subtitle</span>
@@ -177,6 +195,45 @@
       </div>
 
       <footer>
+
+         <div class="display-song">
+            <img src="img/sinister.jpeg" alt="">
+            <div class="display-song__text">
+               <h6>Sinister</h6>
+               <p>Brano Nome</p>
+            </div>
+            <div class="display-song__icons">
+               <i class="far fa-heart"></i>
+               <i class="far fa-folder"></i>
+            </div>
+         </div>
+         <div class="display-player">
+            <div class="display-player__icons">
+               <i class="fas fa-sync-alt"></i>
+               <i class="fas fa-step-backward"></i>
+               <i class="far fa-play-circle"></i>
+               <i class="fas fa-step-forward"></i>
+               <i class="fas fa-redo-alt"></i>
+            </div>
+            <div class="player-container">
+               <span id="current-time">0.25</span>
+               <div class="display-player__slider slider">
+                  <div class="display-slider-over"></div>
+               </div>
+               <span id="end-time">4.35</span>
+            </div>
+
+         </div>
+         <div class="display-volume">
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-desktop"></i>
+            <i class="fas fa-volume-up"></i>
+            <div class="display-volume__slider slider">
+               <div class="display-slider-over"></div>
+            </div>
+
+         </div>
+
 
       </footer>
    </body>
