Main section with flex

--- a/index.html
+++ b/index.html
@@ -59,83 +59,72 @@
 
             <section class="section-container">
                <h2 class="section-title">Recently played</h2>
-               <div class="row">
-                  <div class="col-xs-6 col-sm-3 col-lg-2">
-                     <div class="card-container">
-                        <div class="img-container">
-                           <img src="img/heavy-metal.jpg" alt="">
-                           <div class="img-layover">
-                              <a href=""><i class="far fa-play-circle"></i></a>
-                           </div>
+               <div class="section-body">
+
+                  <div class="card-container">
+                     <div class="img-container">
+                        <img src="img/heavy-metal.jpg" alt="">
+                        <div class="img-layover">
+                           <a href=""><i class="far fa-play-circle"></i></a>
                         </div>
-                        <h4>Heavy Metal</h4>
-                        <span class="img-subtitle">Subtitle</span>
                      </div>
+                     <h4>Heavy Metal</h4>
+                     <span class="img-subtitle">Subtitle</span>
                   </div>
 
-                  <div class="col-xs-6 col-sm-3 col-lg-2">
-                     <div class="card-container">
-                        <div class="img-container">
-                           <img src="img/stranger-things.jpeg" alt="">
-                           <div class="img-layover">
-                              <a href=""><i class="far fa-play-circle"></i></a>
-                           </div>
+                  <div class="card-container">
+                     <div class="img-container">
+                        <img src="img/stranger-things.jpeg" alt="">
+                        <div class="img-layover">
+                           <a href=""><i class="far fa-play-circle"></i></a>
                         </div>
-                        <h4>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h4>
-                        <span class="img-subtitle">Kyle Dyxon & Michael Stein</span>
                      </div>
+                     <h4>Stranger Things, Vol.1 (a Netflix original Series Soundtrack)</h4>
+                     <span class="img-subtitle">Kyle Dyxon & Michael Stein</span>
                   </div>
 
-                  <div class="col-xs-6 col-sm-3 col-lg-2">
-                     <div class="card-container">
-                        <div class="img-container">
-                           <img src="img/a-quite-place.jpeg" alt="">
-                           <div class="img-layover">
-                              <a href=""><i class="far fa-play-circle"></i></a>
-                           </div>
+                  <div class="card-container">
+                     <div class="img-container">
+                        <img src="img/a-quite-place.jpeg" alt="">
+                        <div class="img-layover">
+                           <a href=""><i class="far fa-play-circle"></i></a>
                         </div>
-                        <h4>A quiet place</h4>
-                        <span class="img-subtitle">Subtitle</span>
                      </div>
+                     <h4>A quiet place</h4>
+                     <span class="img-subtitle">Subtitle</span>
                   </div>
 
-                  <div class="col-xs-6 col-sm-3 col-lg-2">
-                     <div class="card-container">
-                        <div class="img-container">
-                           <img src="img/split.jpeg" alt="">
-                           <div class="img-layover">
-                              <a href=""><i class="far fa-play-circle"></i></a>
-                           </div>
+                  <div class="card-container">
+                     <div class="img-container">
+                        <img src="img/split.jpeg" alt="">
+                        <div class="img-layover">
+                           <a href=""><i class="far fa-play-circle"></i></a>
                         </div>
-                        <h4>Split</h4>
-                        <span class="img-subtitle">Subtitle</span>
                      </div>
+                     <h4>Split</h4>
+                     <span class="img-subtitle">Subtitle</span>
                   </div>
 
-                  <div class="col-xs-6 col-sm-3 col-lg-2">
-                     <div class="card-container">
-                        <div class="img-container">
-                           <img src="img/wellness.jpeg" alt="">
-                           <div class="img-layover">
-                              <a href=""><i class="far fa-play-circle"></i></a>
-                           </div>
+                  <div class="card-container">
+                     <div class="img-container">
+                        <img src="img/wellness.jpeg" alt="">
+                        <div class="img-layover">
+                           <a href=""><i class="far fa-play-circle"></i></a>
                         </div>
-                        <h4>A qure for wellness</h4>
-                        <span class="img-subtitle">Subtitle</span>
                      </div>
+                     <h4>A cure for wellness</h4>
+                     <span class="img-subtitle">Subtitle</span>
                   </div>
 
-                  <div class="col-xs-6 col-sm-3 col-lg-2">
-                     <div class="card-container">
-                        <div class="img-container">
-                           <img src="img/sinister.jpeg" alt="">
-                           <div class="img-layover">
-                              <a href=""><i class="far fa-play-circle"></i></a>
-                           </div>
+                  <div class="card-container">
+                     <div class="img-container">
+                        <img src="img/sinister.jpeg" alt="">
+                        <div class="img-layover">
+                           <a href=""><i class="far fa-play-circle"></i></a>
                         </div>
-                        <h4>Sinister</h4>
-                        <span class="img-subtitle">Subtitle</span>
                      </div>
+                     <h4>Sinister</h4>
+                     <span class="img-subtitle">Subtitle</span>
                   </div>
                </div>
             </section>
@@ -143,50 +132,48 @@
             <section class="section-container">
                <h2 class="section-title">Creato per John Doe</h2>
                <p class="section-subtitle">Più ascolti, più saranno accurati i suggerimenti. </p>
-               <div class="row">
-                  <div class="col-xs-6 col-sm-3 col-lg-2">
-                     <div class="card-container">
-                        <div class="img-container">
-                           <img src="img/release-radar.jpeg" alt="">
-                        </div>
-                        <h4>Release Radar</h4>
-                        <span class="img-subtitle">Subtitle</span>
+               <div class="section-body">
+
+                  <div class="card-container">
+                     <div class="img-container">
+                        <img src="img/release-radar.jpeg" alt="">
                      </div>
+                     <h4>Release Radar</h4>
+                     <span class="img-subtitle">Subtitle</span>
                   </div>
 
-                  <div class="col-xs-6 col-sm-3 col-lg-2">
-                     <div class="card-container">
-                        <div class="img-container">
-                           <img src="img/daily-mix-1.jpg" alt="">
-                        </div>
-                        <h4>Daily Mix 1</h4>
-                        <span class="img-subtitle">Subtitle</span>
+                  <div class="card-container">
+                     <div class="img-container">
+                        <img src="img/daily-mix-1.jpg" alt="">
                      </div>
+                     <h4>Daily Mix 1</h4>
+                     <span class="img-subtitle">Subtitle</span>
                   </div>
+
                </div>
             </section>
 
             <section class="section-container">
                <h2 class="section-title">Artisti più popolari</h2>
                <p class="section-subtitle">Più ascolti, più saranno accurati i suggerimenti. </p>
-               <div class="row">
-                  <div class="col-xs-6 col-sm-3 col-lg-2">
-                     <div class="card-container">
-                        <div class="img-container img-container--circle">
-                           <img src="img/heavy-metal.jpg" alt="">
-                        </div>
-                        <h4>Lana Del Ray</h4>
+               <div class="section-body">
+
+                  <div class="card-container">
+                     <div class="img-container img-container--circle">
+                        <img src="img/heavy-metal.jpg" alt="">
                      </div>
+                     <h4>Lana Del Ray</h4>
                   </div>
 
-                  <div class="col-xs-6 col-sm-3 col-lg-2">
-                     <div class="card-container img-container--circle">
-                        <div class="img-container">
-                           <img src="img/heavy-metal.jpg" alt="">
-                        </div>
-                        <h4>Ludovico Einaudi</h4>
+
+
+                  <div class="card-container img-container--circle">
+                     <div class="img-container">
+                        <img src="img/heavy-metal.jpg" alt="">
                      </div>
+                     <h4>Ludovico Einaudi</h4>
                   </div>
+
                </div>
             </section>
 
@@ -200,7 +187,7 @@
             <img src="img/sinister.jpeg" alt="">
             <div class="display-song__text">
                <h6>Sinister</h6>
-               <p>Brano Nome</p>
+               <a href="#">Brano Nome</a>
             </div>
             <div class="display-song__icons">
                <i class="far fa-heart"></i>
@@ -211,27 +198,29 @@
             <div class="display-player__icons">
                <i class="fas fa-sync-alt"></i>
                <i class="fas fa-step-backward"></i>
-               <i class="far fa-play-circle"></i>
+               <i id="play" class="far fa-play-circle"></i>
                <i class="fas fa-step-forward"></i>
                <i class="fas fa-redo-alt"></i>
             </div>
             <div class="player-container">
                <span id="current-time">0.25</span>
                <div class="display-player__slider slider">
-                  <div class="display-slider-over"></div>
+                  <div class="display-slider-over">
+                     <div class="slider-circle"></div>
+                  </div>
                </div>
                <span id="end-time">4.35</span>
             </div>
-
          </div>
          <div class="display-volume">
             <i class="fas fa-bars"></i>
             <i class="fas fa-desktop"></i>
             <i class="fas fa-volume-up"></i>
-            <div class="display-volume__slider slider">
-               <div class="display-slider-over"></div>
+            <div class="slider display-volume__slider">
+               <div class="display-slider-over">
+                  <div class="slider-circle"></div>
+               </div>
             </div>
-
          </div>
 
 
