--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
       <!-- Google fonts -->
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
-      <!-- Bootstrap 3 -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 
       <link rel="stylesheet" href="css/style.css">
       <title>Spotify Web</title>
@@ -20,15 +19,53 @@
 
       <div class="flex-container">
          <div class="side-nav-bar">
-            <nav>
-               <div class="logo-container">
-                  <img src="img/spotify-logo.png" alt="">
-               </div>
+            <div class="side-nav-bar__top">
 
-               <div class="playlist-container">
-                  <h3>PLAYLIST</h3>
+               <i id="img-xs" class="fab fa-spotify"></i>
+               <img id="img-s"src="img/spotify-logo.png" alt="">
+
+               <div class="search-section">
+                  <ul class="search-list">
+                     <li id="active">
+                        <i class="fas fa-fw fa-home"></i>
+                        <a href="#"><span>Home</span> </a>
+                     </li>
+                     <li>
+                        <i class="fas fa-fw fa-search"></i>
+                        <a href="#"><span>Cerca</span></a>
+                     </li>
+                     <li>
+                        <i class="far fa-fw fa-bookmark"></i>
+                        <a href="#"><span>La tua libreria</span></a>
+                     </li>
+                  </ul>
                </div>
-            </nav>
+               <div class="playlist-title">
+                  <h5>PLAYLIST</h5>
+                  <h6>Crea Playlist</h6>
+               </div>
+            </div>
+
+            <ul class="playlist-list">
+               <li><a href="">Nome Playlist</a></li>
+               <li><a href="">Nome Playlist</a></li>
+               <li><a href="">Nome Playlist</a></li>
+               <li><a href="">Nome Playlist</a></li>
+               <li><a href="">Nome Playlist</a></li>
+               <li><a href="">Nome Playlist</a></li>
+            </ul>
+
+            <div class="side-nav-bar__bottom">
+
+               <div id="install">
+                  <i class="fas fa-arrow-circle-down"></i>
+                  <span>Installa app</span>
+               </div>
+               <div id="user">
+                  <i class="fas fa-user-circle"></i>
+                  <h4>John Doe</h4>
+               </div>
+            </div>
          </div>
 
          <div class="main-content">
@@ -202,7 +239,7 @@
                <i class="fas fa-step-forward"></i>
                <i class="fas fa-redo-alt"></i>
             </div>
-            <div class="player-container">
+            <div class="slider-container">
                <span id="current-time">0.25</span>
                <div class="display-player__slider slider">
                   <div class="display-slider-over">
@@ -213,7 +250,7 @@
             </div>
          </div>
          <div class="display-volume">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-list"></i>
             <i class="fas fa-desktop"></i>
             <i class="fas fa-volume-up"></i>
             <div class="slider display-volume__slider">
