--- a/index.html
+++ b/index.html
@@ -20,29 +20,34 @@
       <div class="flex-container">
          <div class="side-nav-bar">
             <div class="side-nav-bar__top">
+               <div class="logo-container">
+                  <i id="img-xs" class="fab fa-spotify"></i>
+                  <img id="img-s"src="img/spotify-logo.png" alt="">
+               </div>
 
-               <i id="img-xs" class="fab fa-spotify"></i>
-               <img id="img-s"src="img/spotify-logo.png" alt="">
 
                <div class="search-section">
                   <ul class="search-list">
                      <li id="active">
                         <i class="fas fa-fw fa-home"></i>
-                        <a href="#"><span>Home</span> </a>
+                        <a href="#">Home</a>
                      </li>
                      <li>
                         <i class="fas fa-fw fa-search"></i>
-                        <a href="#"><span>Cerca</span></a>
+                        <a href="#">Cerca</a>
                      </li>
                      <li>
                         <i class="far fa-fw fa-bookmark"></i>
-                        <a href="#"><span>La tua libreria</span></a>
+                        <a href="#">La tua libreria</a>
                      </li>
                   </ul>
                </div>
                <div class="playlist-title">
-                  <h5>PLAYLIST</h5>
-                  <h6>Crea Playlist</h6>
+                  <h4>PLAYLIST</h4>
+                  <a href="">
+                     <i class="fas fa-plus-square"></i>
+                     <span>Crea Playlist</span>
+                  </a>
                </div>
             </div>
 
